<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrevKit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">PrevKit</string>
    <string name="itemname">Name of the Item</string>
    <string name="quantity">Specify quanitity of item</string>
    <string name="Add">Add the Plan</string>
    <string name="facebook_app_id">1493398680921208</string>
    <string name="title_activity_checklist_item">ChecklistItemActivity</string>
    <string name="title_activity_checklist">Item Checklist</string>
    <string name="title_activity_to_do_list">Create Disaster Plan</string>
    <string name="planList">Disaster Plan</string>
    <string name="desc">Enter a Plan of Action</string>
    <string name="login">LOGIN</string>
	<string name="register">REGISTER</string>
	<string name="descRep">aaaa</string>
	<string name="title_activity_register">Register</string>
	<string name="checklist">ITEM RECOMMENDATION</string>
	<string name="disasterplan">DISASTER PLAN</string>
	<string name="inventory">INVENTORY</string>
	<string name="member">GROUP MEMBERS</string>
	<string name="emergency">EMERGENCY CONTACTS</string>
	<string name="title_activity_menu">Main Menu</string>
	<string name="logout">LOG OUT</string>
	<string name ="ok">Ok</string>
	<string name="addmember">Add a New Member</string>
	<string name="enteruser">Enter a username</string>
	<string name="reguserFullName">Full Name</string>
	<string name="txtSearchGroup">Enter Group Name</string>
	<string name="groupJoin">Join Group</string>
	<string name="groupCreate">Create Group</string>

</resources>
