

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayoutMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pengu"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/titleLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/unnamed" />

        <TextView
            android:id="@+id/messageUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/checklistButton"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/checklist"
       		android:background="#15CAB1"
        	android:textSize="30dp" />

        <Button
            android:id="@+id/disasterButton"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#15CAB1"
            android:text="@string/disasterplan"
            android:textSize="30dp" />

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#15CAB1"
            android:text="@string/inventory"
            android:textSize="30dp" />

        <Button
            android:id="@+id/memberButton"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#15CAB1"
            android:text="@string/member"
            android:textSize="30dp" />
        
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            
           <Button
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/roundbutton"
	                android:text="Button1" />
           
           <Button
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Button2" />
           
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#15CAB1"
            android:text="@string/logout"
            android:textSize="30dp" />
    </LinearLayout>