<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrev"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pandapanic.LoginActivity" >

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="fill_parent"
        android:layout_height="470dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/descRep"
        android:src="@drawable/prevkitlogo" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    
    <ImageView
        android:id="@+id/userLog"
        android:layout_width="70dp"
        android:layout_height="70dp"
         android:layout_marginTop="20dp"
        android:background="@drawable/logbox"
        android:contentDescription="@string/descRep"
        android:src="@drawable/username" />
    
    <EditText
        android:id="@+id/txtUser"
        android:layout_width="470dp"
        android:layout_height="70dp"
        android:background="#bebebe"
      	android:fontFamily="sans-serif-medium"  
         android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:labelFor="@id/txtUser"
        android:textColor="#363636"
        android:textSize="36dp" >

        <requestFocus />
    </EditText>

</LinearLayout>    

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <ImageView
        android:id="@+id/passLog"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logbox"
        android:contentDescription="@string/descRep"
        android:src="@drawable/password" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="470dp"
        android:layout_height="70dp"
        android:background="#bebebe"
       android:layout_marginTop="20dp"
      	android:fontFamily="sans-serif-medium"  
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:labelFor="@id/txtPassword"
        android:textColor="#363636"
        android:textSize="36sp" />
    
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
      	android:fontFamily="sans-serif-medium"  
        android:layout_marginTop="20dp"
        android:background="@drawable/regbox"
        android:text="@string/register"
        android:textSize="35dp"
        android:textColor="#f8ede4" />
    
    <Button
        android:id="@+id/Login"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inbox"
        android:textSize="35dp"
      	android:fontFamily="sans-serif-medium"  
        android:text="@string/login"
        android:textColor="#f8ede4" />
    
	</LinearLayout>
	
</LinearLayout>